--- a/preface.tex
+++ b/preface.tex
@@ -1,5 +1,6 @@
 \chapter{Preface}
 
+RALLLLLLLLLLLLLFFFFFFFFFFFFFF
 This MTH 243 Supplement was produced with grant support from 
 Open Oregon 
 for PCC students using 
